--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,13 @@
 	    <version>5.0.8.RELEASE</version>
 	</dependency>    
     
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>5.0.8.RELEASE</version>
+	</dependency>
+    
+    
   </dependencies>
 </project>
